3.3.4/_sources/gallery/subplots_axes_and_figures/multiple_figs_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/multiple_figs_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_multiple_figs_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_multiple_figs_demo.py:


==================
Multiple Figs Demo
==================

Working with multiple figure windows and subplots

.. GENERATED FROM PYTHON SOURCE LINES 8-15

.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np

    t = np.arange(0.0, 2.0, 0.01)
    s1 = np.sin(2*np.pi*t)
    s2 = np.sin(4*np.pi*t)








.. GENERATED FROM PYTHON SOURCE LINES 16-17

Create figure 1

.. GENERATED FROM PYTHON SOURCE LINES 17-24

.. code-block:: default


    plt.figure(1)
    plt.subplot(211)
    plt.plot(t, s1)
    plt.subplot(212)
    plt.plot(t, 2*s1)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_multiple_figs_demo_001.png
    :alt: multiple figs demo
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    [<matplotlib.lines.Line2D object at 0x7fcbe322f2e0>]



.. GENERATED FROM PYTHON SOURCE LINES 25-26

Create figure 2

.. GENERATED FROM PYTHON SOURCE LINES 26-30

.. code-block:: default


    plt.figure(2)
    plt.plot(t, s2)




.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_multiple_figs_demo_002.png
    :alt: multiple figs demo
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    [<matplotlib.lines.Line2D object at 0x7fcbe3e06940>]



.. GENERATED FROM PYTHON SOURCE LINES 31-32

Now switch back to figure 1 and make some changes

.. GENERATED FROM PYTHON SOURCE LINES 32-40

.. code-block:: default


    plt.figure(1)
    plt.subplot(211)
    plt.plot(t, s2, 's')
    ax = plt.gca()
    ax.set_xticklabels([])

    plt.show()



.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_multiple_figs_demo_003.png
    :alt: multiple figs demo
    :class: sphx-glr-single-img






.. _sphx_glr_download_gallery_subplots_axes_and_figures_multiple_figs_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: multiple_figs_demo.py <multiple_figs_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: multiple_figs_demo.ipynb <multiple_figs_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
